//  Copyright 2018 U.C. Berkeley RISE Lab
// 
//  Licensed under the Apache License, Version 2.0 (the "License");
//  you may not use this file except in compliance with the License.
//  You may obtain a copy of the License at
// 
//      http://www.apache.org/licenses/LICENSE-2.0
// 
//  Unless required by applicable law or agreed to in writing, software
//  distributed under the License is distributed on an "AS IS" BASIS,
//  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//  See the License for the specific language governing permissions and
//  limitations under the License.

syntax = "proto2";

message DataValue {
  required string value = 1;
  required int64 timestamp = 2;
}

message ServerThreadStatistics {
  required uint64 storage_consumption = 1;
  required double occupancy = 2;
  required uint32 epoch = 3;
  required uint32 total_accesses = 4;
}

message KeyAccessData {
  message KeyCount {
    required string key = 1;
    required uint32 access_count = 2;
  }

  repeated KeyCount keys = 1;
}

message TierMembership {
  message Tier {
    message Server {
      required string public_ip = 1;
      required string private_ip = 2;
    }
 
    required uint32 tier_id = 1;
    repeated Server servers = 2;
  }

  required uint64 start_time = 1;
  repeated Tier tiers = 2;
}

message UserFeedback {
  message KeyLatency {
    required string key = 1;
    required double latency = 2;
  }

  required string uid = 1;
  optional double latency = 2;
  optional bool finish = 3;
  optional double throughput = 4;
  optional bool warmup = 5;
  repeated KeyLatency key_latency = 6;
}

message KeySizeData {
  message KeySize {
    required string key = 1;
    required uint32 size = 2;
  }
  repeated KeySize key_sizes = 1;
}
